# ecc-dreamplace

./: .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  flake.nix  pyproject.toml  result
.github/actions/build-wheel/: action.yml
.github/workflows/: ci.yml  release.yml
dreamplace/: NonLinearPlace.py
unittest/ops/abacus_legalize_unittest/: CMakeLists.txt
