[build-system]
requires = ["scikit-build-core", "torch"]
build-backend = "scikit_build_core.build"

[project]
name = "ecc-dreamplace"
version = "0.1.0-alpha.3"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.4",
  "scipy>=1.7",
  "numpy>=1.21",
  "pyunpack>=0.1.2",
  "patool>=1.12",
  "cairocffi>=0.9.0",
  "pkgconfig>=1.4.0",
  "setuptools>=39.1.0",
  "torch>=1.6.0",
  "shapely>=1.7.0",
  "pygmo>=2.16.1",
  "pyDOE2>=1.3.0",
  "shap>=0.45.0,<0.51",
  "Pyro4>=4.82",
  "ConfigSpace>=0.6.0",
  "statsmodels>=0.13.2",
  "xgboost>=1.5.1",
]

[tool.scikit-build]
cmake.define.PYTHON_EXECUTABLE = "python3"
cmake.define.CMAKE_CXX_ABI = 1
sdist.include = ["thirdparty/pybind11/include/pybind11", "unittest"]
build.verbose = true
editable.rebuild = true
build-dir = "build"

[dependency-groups]
dev = [
  "auditwheel",
  "scikit-build-core>=0.12.2",
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
  \.git
| \.venv
| build
| dist
)/
'''
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
# known_first_party = "your_package_name"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
